[tool.poetry]
name = "udecursos_backend"
version = "0.1.0"
description = ""
authors = ["CxrlosKenobi <kenobi@ieee.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^4.2.0"
Flask = "^2.2.2"
Flask-Cors = "^3.0.10"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
